tests/compile_fail/005_clear_target_not_buffer.vox
a number called "value" is 1.
clear value.
